--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,22 @@ body {
   width: 50%;
   position: absolute;
   left: 0;
+  background-color: rgb(172, 215, 221);
 }
 
 #canvas {
   /* width: 50%; */
   position: absolute;
+  right: 0;
+}
+
+#sketch-toolbar {
+  position: absolute;
+  bottom: 0;
+}
+
+.kaleidoscope-toolbar {
+  position: absolute;
+  bottom: 0;
   right: 0;
 }
