--- a/styles.css
+++ b/styles.css
@@ -25,3 +25,19 @@ body {
   bottom: 0;
   right: 0;
 }
+
+/* Dropup Sketch.IO menu */
+#sketch-toolbar {
+  position: relative;
+  margin-top: 40%;
+  display: inline-block;
+}
+
+.sketch-toolbar-category {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
