--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,12 +1,13 @@
 @import './_kaleidoscopeCanvas';
 @import './_sketchCanvas';
-@import './sketchToolbar';
+@import './_sketchToolbar';
 
 $background-color: rgb(162, 215, 221);
-
-$mainButtonHover: #8DE1D2;
-$secondaryButtonHover: #00DDAA;
 
 body {
   background-color: $background-color;
 }
+
+
+
+  
