--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,10 +1,3 @@
-.sketch-api {
-  width: 50%;
-  position: absolute;
-  left: 0;
-  background-color: #acd7dd;
-}
-
 #canvas {
   position: absolute;
   right: 0;
@@ -12,11 +5,22 @@
 
 .kaleidoscope-toolbar {
   position: absolute;
-  bottom: 0;
   right: 0;
+  bottom: 0;
 }
 
-/* Dropup Sketch.IO menu */
+#sketch-canvas {
+  position: absolute;
+  left: 0;
+  width: 50%;
+}
+
+.sketch-toolbar {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
+
 #sketch-toolbar {
   position: fixed;
   bottom: 0;
@@ -44,10 +48,12 @@
 
 #sketch-toolbar-menu li:hover {
   color: #8DE1D2;
+  cursor: pointer;
 }
 
 .sketch-toolbar-category li:hover {
   color: #00DDAA !important;
+  cursor: pointer;
 }
 
 body {
