--- a/styles/_sketchCanvas.scss
+++ b/styles/_sketchCanvas.scss
@@ -3,10 +3,14 @@
   left: 0;
 }
 
-#sketch-canvas {
+#sketch-canvas-container {
   @include position-left;
+  top: 0;
+  bottom: 0;
   width: 50%;
 }
+
+#sketch-canvas {}
 
 .sketch-toolbar {
   @include position-left;
