--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -14,17 +14,31 @@ body {
   // border: $main-border;
 }
 
-#sketch-canvas-container {
-  @include position-left;
-  top: 0;
-  bottom: 0;
-  width: 50%;
-  // border-left: $main-border;
-  // border-top: $main-border;
-  // border-bottom: $main-border;
+#app-container {
+  display: grid;
+  grid-template-rows: 100vh;
+  grid-template-columns: 20px 50fr 50fr 20px;
+  border: 1px solid red;
+  #sketch-canvas-toolbar {
+    background-color: blue;
+    grid-row: 1;
+    grid-column: 1;
+    .sketch-toolbar {
+      @include position-left;
+      bottom: 0;
+    }
+  }
+  #sketch-canvas-container {
+    @include position-left;
+    top: 0;
+    bottom: 0;
+    width: 50%;
+  }
+  #kaleidoscope-canvas{
+    border: 1px solid red;
+  }
+  #kaleidoscope-canvas-toolbar {
+    background-color: rgb(145, 145, 255);
+  }
 }
 
-.sketch-toolbar {
-  @include position-left;
-  bottom: 0;
-}
