--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -23,7 +23,7 @@ body {
     background-color: blue;
     grid-row: 1;
     grid-column: 1;
-    .sketch-toolbar {
+    #sketch-toolbar {
       @include position-left;
       bottom: 0;
     }
