--- a/styles/_kaleidoscopeToolbar.scss
+++ b/styles/_kaleidoscopeToolbar.scss
@@ -1,17 +1,21 @@
+$background-color: #F6F2F2;
+$canvas-background-color: #C1E7FF;
+$sketch-menu-color: #1286E1;
+
+@mixin p {
+  font-family: 'helvetica neue', sans-serif;
+  font-weight: 500;
+  font-size: 1.5vw;
+  color: $sketch-menu-color;
+} 
+
 #kaleidoscope-canvas-toolbar {
-  background-color: rgb(29, 29, 255);
-  border: 1px solid purple;
+  background-color: $background-color;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  #input-container {
-    display: flex;
-    gap: 2rem;
-    transform: rotate(90deg);
-    justify-content: space-evenly;
-    transform-origin: center left;
-    margin-left: 50%;
-    margin-right: 50%;
+  p {
+    @include p;
   }
   input {
     width: 30vh;
@@ -23,8 +27,28 @@
     border: none;
     align-self: center;
     text-decoration: none;
+    text-align: center;
   }
   button:focus {
     outline: 0;
+  }
+  #input-container {
+    display: flex;
+    gap: 4rem;
+    transform: rotate(270deg) translateX(-32px); //Is there a better way than translate to get absolute vertical center?
+    justify-content: center;
+    transform-origin: center left;
+    margin-left: 50%;
+    margin-right: 50%;
+  }
+  #play-button {
+    display: none;
+  }
+  #pause-button {
+    font-size: .5rem;
+  }
+  #prism {
+    position: relative;
+    left: -4rem;
   }
 }
