--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,5 +1,6 @@
 @import './_kaleidoscopeToolbar';
 @import './_sketchToolbar';
+@import './toolTips';
 
 $background-color: #F6F2F2;
 $canvas-background-color: #C1E7FF;
