--- a/src/styles/_toolTips.scss
+++ b/src/styles/_toolTips.scss
@@ -1,25 +1,25 @@
-@mixin tool-tip {
-      background-color: #333;
-      border-radius: 10px;
-      color: #9b22fd;
-      display: none;
-      padding: 10px 15px;
-      position: absolute;
-      text-align: center;
-      z-index: 11;
+// @mixin tool-tip {
+//       background-color: #333;
+//       border-radius: 10px;
+//       color: #9b22fd;
+//       display: none;
+//       padding: 10px 15px;
+//       position: absolute;
+//       text-align: center;
+//       z-index: 11;
 
-}
+// }
 
-.tool-tip-right::after {
-  @include tool-tip;
-  content: 'select';
-  top: 0;
-  left: 0;
-  // transform: translateX(calc(100% + 10px));
-}
+// .tool-tip-right::after {
+//   @include tool-tip;
+//   content: 'select';
+//   top: 0;
+//   left: 0;
+//   // transform: translateX(calc(100% + 10px));
+// }
 
-.tool-tip-right:hover::after {
-  display: inline-block;
+// .tool-tip-right:hover::after {
+//   display: inline-block;
 
-}
+// }
 
