--- a/src/styles/spectrum.css
+++ b/src/styles/spectrum.css
@@ -483,7 +483,7 @@ vertical-align: middle;
 .sp-preview-inner {
   width: 32px;
   height: 32px;
-  border: 1px solid #f6f2f2ec;
+  /* border: 1px solid #f6f2f2ec; */
 }
 
 .sp-thumb-el  {
