--- a/src/styles/_sketchToolbar.scss
+++ b/src/styles/_sketchToolbar.scss
@@ -21,6 +21,7 @@ $mainButtonPos: inline;
 
 #sketch-toolbar {
   display: flex;
+  visibility: visible !important;
   padding: 5px 0;
   flex-direction: column;
   align-content: center;
