--- a/src/styles/_sketchToolbar.scss
+++ b/src/styles/_sketchToolbar.scss
@@ -1,5 +1,5 @@
-$sketch-menu-background-color: #002341;
-$icon-background: #002341;
+$sketch-menu-background-color: #10273b;
+$icon-background: #10273b;
 $sketch-menu-icon-color: #F6F2F2;
 $icon-width: 45px;
 $mainButtonPos: inline;
