--- a/src/styles/_inputRange.scss
+++ b/src/styles/_inputRange.scss
@@ -1,43 +1,44 @@
-// $main: #1286E1;
-// $secondary: #C1E7FF;
+$main: #1286E1;
+$secondary: rgba(255, 255, 255);
+$thumb: white;
+$slider: white;
+$purple: #7a3df4;
+$background-color: #e3c2fb;
 
-// input[type=range] {
-//   -webkit-appearance: none;
-//   margin: 18px 0;
-//   width: 100%;
-// }
-// input[type=range]:focus {
-//   outline: none;
-// }
-// input[type=range]::-webkit-slider-runnable-track {
-//   width: 100%;
-//   height: 8.4px;
-//   cursor: pointer;
-//   box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-//   background: #3071a9;
-//   border-radius: 1.3px;
-//   border: 0.2px solid #010101;
-// }
-// input[type=range]::-webkit-slider-thumb {
-//   box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-//   border: 1px solid #000000;
-//   height: 36px;
-//   width: 16px;
-//   border-radius: 3px;
-//   background: #ffffff;
-//   cursor: pointer;
-//   -webkit-appearance: none;
-//   margin-top: -14px;
-// }
-// input[type=range]:focus::-webkit-slider-runnable-track {
-//   background: #367ebd;
-// }
+input[type=range] {
+  -webkit-appearance: none;
+  margin: 9px 0;
+  width: 100%;
+}
+input[type=range]:focus {
+    outline: none;
+  }
+input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 3px;
+  cursor: pointer;
+  background-color: $slider;
+}
+input[type=range]::-webkit-slider-thumb {
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  border: 5px solid $thumb;
+  background-color: $background-color;
+  cursor: pointer;
+  z-index: 10;
+  -webkit-appearance: none;
+  margin-top: -8.6px;
+}
+// // input[type=range]:focus::-webkit-slider-runnable-track {
+// //   // background: #367ebd;
+// // }
 // input[type=range]::-moz-range-track {
 //   width: 100%;
 //   height: 8.4px;
 //   cursor: pointer;
 //   box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-//   background: #3071a9;
+//   background: #a93e30;
 //   border-radius: 1.3px;
 //   border: 0.2px solid #010101;
 // }
@@ -81,8 +82,8 @@
 //   cursor: pointer;
 // }
 // input[type=range]:focus::-ms-fill-lower {
-//   background: #3071a9;
+//   // background: #3071a9;
 // }
 // input[type=range]:focus::-ms-fill-upper {
-//   background: #367ebd;
+//   // background: #367ebd;
 // }
