--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -17,7 +17,7 @@ body {
     display: grid;
     grid-template-rows: 100vh;
     grid-template-columns: 45px 1fr 1fr 45px;
-    // visibility: hidden;
+    overflow: hidden;
     #load-screen {
       width: 100vw;
       height: 100vh;
@@ -56,6 +56,7 @@ body {
       }
     }
     #sketch-canvas-container {
+
       background-color: $background-color;
       overflow: hidden;
       position: relative;
